--- a/Android_Studio/NavigationDrawer/app/src/main/AndroidManifest.xml
+++ b/Android_Studio/NavigationDrawer/app/src/main/AndroidManifest.xml
@@ -8,12 +8,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/MaterialDrawerTheme.TranslucentStatus">
+        android:supportsRtl="true">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/MaterialDrawerTheme.Light.DarkToolbar">
+            android:theme="@style/MaterialDrawerTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
